infrastructure/spark-k8s/kubernetes/spark-master-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: spark-master
spec:
  replicas: 3
  selector:
    matchLabels:
      app: spark-master
  template:
    metadata:
      labels:
        app: spark-master
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: spark-master-container
        image: spark-hadoop:3.2.0
        command: ["/spark-master"]
        ports:
        - name: spark
          containerPort: 7077
        - name: webui
          containerPort: 8080
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "4"
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
