infrastructure/spark-k8s/kubernetes/spark-worker-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: spark-worker
spec:
  replicas: 2  # Número de réplicas del Spark Worker
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
      - name: spark-worker
        image: spark-hadoop:3.2.0
        command: ["/spark-worker"]
        ports:
        - containerPort: 8081  # Puerto del servicio Spark Worker
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8081
        readinessProbe:
          httpGet:
            path: /
            port: 8081
        securityContext:
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: Always  # Política para forzar la actualización de la imagen en cada implementación
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
