infrastructure/spark-k8s/kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: spark-kubernetes
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: spark-master
            port:
              number: 8080
  tls:
  - hosts:
    - spark-kubernetes
    secretName: spark-tls-secret
